# tkom

./: CMakeLists.txt  CppScanner.cpp  CppScanner.h  Parser.cpp  Parser.h  Token.cpp  Token.h  a.out  buildProject  buildProjectBad~  buildProjectGood  buildThisProject  jou  main.cpp
pr/: AndExpression.cpp  AndExpression.h  BuildOrStaticExpression.cpp  BuildOrStaticExpression.h  CompExpression.cpp  CompExpression.h  Expression.cpp  Expression.h  Expressions.cpp  Expressions.h  ForExpression.cpp  ForExpression.h  FunctionCall.cpp  FunctionCall.h  FunctionDeclaration.cpp  FunctionDeclaration.h  FunctionStack.h  IfExpression.cpp  IfExpression.h  OrExpression.cpp  OrExpression.h  Value.cpp  Value.h  VariableDeclaration.cpp  VariableDeclaration.h  VariableStack.h
src/: CppScanner.cpp  CppScanner.h  GraphNode.cpp  GraphNode.h  Parser.cpp  Token.cpp  Token.h  buildProject~  main.cpp  pmakeoutout
src/jou/: parser
src/pr/: AndExpression.cpp  BuildOrStaticExpression.cpp  BuildOrStaticExpression.h  CompExpression.h  Expressions.cpp  Expressions.h  ForExpression.cpp  ForExpression.h  FunctionCall.cpp  FunctionDeclaration.h  FunctionStack.cpp  FunctionStack.h  IfExpression.cpp  Operator.cpp  Operator.h  Value.cpp  VariableDeclaration.h  VariableStack.cpp  VariableStack.h
test/: CMakeLists.txt  Tests.cpp  TokenTest.cpp
unzipped/: CMakeCache.txt  CMakeLists.txt  Makefile  Parser.cpp  Parser.h  buildProjectBad  buildProjectGood  cmake_install.cmake  main.cpp  tkom2
unzipped/pr/: AndExpression.cpp  AndExpression.h  BuildOrStaticExpression.cpp  BuildOrStaticExpression.h  CompExpression.cpp  CompExpression.h  Expression.h  Expressions.cpp  Expressions.h  ForExpression.cpp  ForExpression.h  FunctionCall.h  FunctionDeclaration.cpp  FunctionDeclaration.h  IfExpression.h  OrExpression.cpp  OrExpression.h  Value.cpp  Value.h  VariableDeclaration.h
